@@ -3,30 +3,15 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 plugins {
     id("buildlogic.java-common-conventions")
 
-    application
+    `java-library`
 
     id("org.openjfx.javafxplugin") version("0.1.0")
 }
 
-application{
-    mainClass.set("org.jabref.http.server.Server")
-    mainModule.set("org.jabref.jabsrv")
-
-    applicationDefaultJvmArgs = listOf(
-        "--enable-native-access=com.sun.jna"
-    )
-}
-
 dependencies {
-    implementation(project(":jablib"))
+    api(project(":jablib"))
 
     implementation("org.slf4j:slf4j-api:2.0.17")
-    implementation("org.tinylog:slf4j-tinylog:2.7.0")
-    implementation("org.tinylog:tinylog-impl:2.7.0")
-    // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
-    implementation("org.slf4j:jul-to-slf4j:2.0.17")
-    // route all requests to log4j to SLF4J
-    implementation("org.apache.logging.log4j:log4j-to-slf4j:2.24.3")
 
     // API
     implementation("jakarta.ws.rs:jakarta.ws.rs-api:4.0.0")
@@ -38,6 +23,7 @@ dependencies {
     implementation("org.glassfish.jersey.inject:jersey-hk2:3.1.10")
     implementation("org.glassfish.hk2:hk2-api:3.1.1")
     implementation("org.glassfish.hk2:hk2-utils:3.1.1")
+    implementation("org.glassfish.hk2:hk2-locator:3.1.1")
 
     // testImplementation("org.glassfish.hk2:hk2-testing:3.0.4")
     // implementation("org.glassfish.hk2:hk2-testing-jersey:3.0.4")
@@ -52,10 +38,7 @@ dependencies {
     implementation("jakarta.validation:jakarta.validation-api:3.1.1")
     implementation("org.hibernate.validator:hibernate-validator:8.0.2.Final")
 
-    implementation("com.konghq:unirest-modules-gson:4.4.6")
-
-    implementation("org.glassfish.jersey.inject:jersey-hk2:3.1.10")
-    implementation("org.glassfish.hk2:hk2-api:3.1.1")
+    implementation("com.konghq:unirest-modules-gson:4.4.7")
 
     // Allow objects "magically" to be mapped to JSON using GSON
     // implementation("org.glassfish.jersey.media:jersey-media-json-gson:3.1.1")
@@ -76,6 +59,14 @@ dependencies {
         exclude(group = "net.bytebuddy", module = "byte-buddy")
     }
     testImplementation("net.bytebuddy:byte-buddy:1.17.5")
+
+    testImplementation("org.tinylog:slf4j-tinylog:2.7.0")
+    testImplementation("org.tinylog:tinylog-impl:2.7.0")
+    // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
+    testImplementation("org.slf4j:jul-to-slf4j:2.0.17")
+    // route all requests to log4j to SLF4J
+    testImplementation("org.apache.logging.log4j:log4j-to-slf4j:2.24.3")
+
 }
 
 javafx {
@@ -91,13 +82,4 @@ tasks.test {
         exceptionFormat = TestExceptionFormat.FULL
     }
     maxParallelForks = 1
-}
-
-tasks.named<JavaExec>("run") {
-    doFirst {
-        application.applicationDefaultJvmArgs =
-            listOf(
-                "--enable-native-access=com.sun.jna"
-            )
-    }
 }
